Websubmit: Fixes minor bugs in conference submission form
* The 111__ field is created once, not each time for every subfield
* Removes the superfluous coma and space, when the state is not given
* Removes the 6531_ field, when there are no keywords
* Fixes the bug, where the 'Fields of interest' choices
  were not saved
* Adds css class that can be used for links which should be displayed
  in different color than visited links (visited links on
  inspire's blue background are invisible)

--- a/webstyle/invenio_inspire.css
+++ b/webstyle/invenio_inspire.css
@@ -103,10 +103,16 @@ a:link {
    color:#0066CC;
 }
 
-
 a:visited {
 color:#6699cc;
 }
+
+/* .link_active is for links that are marked as visited
+but should be displayed as active*/
+a.link_active {
+   color:#0066CC;
+}
+
 a:hover {
 background-color:#6699CC;
 color:#FFFFFF;
